# game-simulation-sandbox

./: .gitignore  .pre-commit-config.yaml  actions.py  board.py  main.py  player_mats.py  pyproject.toml  random_baseline.json  requirements.txt  state_tree.py
blogpost/: index.md
doc/: backtracking-test.puml  tictactoe-mcts.puml  tree-search.puml
game_simulation_sandbox/: __init__.py  state_tree.py  test_anytree.py
game_simulation_sandbox/cartpole/: __main__.py
game_simulation_sandbox/frozenlake/: __main__.py
game_simulation_sandbox/gameoflife/: __main__.py  test_transition.py  transition.py
game_simulation_sandbox/nidavellir/: environment_test.py  qlearn.py
game_simulation_sandbox/ontour/: roadmap.py
game_simulation_sandbox/railroadink/: board.py  tiles.py
game_simulation_sandbox/ri2048/: __main__.py  environment.py  game.py  simple_strategy.py
game_simulation_sandbox/scythe/: __main__.py  actions.py
game_simulation_sandbox/tictactoe/: __main__.py  game.py
game_simulation_sandbox/treesearch/: backtracking.py  interface.py  mcts.py  mocks.py  random_walk.py  test_backtracking.py
game_simulation_sandbox/tridom/: pieces.py  test_pieces.py
gss/nidavellir/: coin-upgrades.py
gss/scythe/: player_mats.py
src/game_simulation_sandbox/: collatz_bottom_up.py  igraph_util.py  state_tree.py
src/game_simulation_sandbox/cartpole/: __main__.py
src/game_simulation_sandbox/frozenlake/: __main__.py  main.py
src/game_simulation_sandbox/gameoflife/: __main__.py  test_transition.py  transition.py
src/game_simulation_sandbox/nidavellir/: coin_upgrades.py  environment.py  environment_test.py  mcts.py  qlearn.py
src/game_simulation_sandbox/ontour/: roadmap.py  test_longest_simple_path.py
src/game_simulation_sandbox/ontour/data/: usa.yml
src/game_simulation_sandbox/ri2048/: __main__.py  environment.py  game.py  simple_strategy.py  training.py
src/game_simulation_sandbox/scythe/: __main__.py  actions.py  board.py  main.py  player_mats.py
src/game_simulation_sandbox/tictactoe/: game.py  test_game.py
src/game_simulation_sandbox/tridom/: pieces.py
