[tool.poetry]
name = "game-simulation-sandbox"
version = "0.1.0"
description = "Simulation of board and computer games using graph and machine learning algorithms"
authors = ["Martin Ueding <mu@martin-ueding.de>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
tqdm = "^4.59.0"
anytree = "^2.8.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
