[tool.poetry]
name = "game-simulation-sandbox"
version = "0.1.0"
description = "Simulation of board and computer games using graph and machine learning algorithms"
authors = ["Martin Ueding <mu@martin-ueding.de>"]
license = "MIT"
repository = "https://github.com/martin-ueding/game-simulation-sandbox"
classifiers = [
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Topic :: Games/Entertainment :: Turn Based Strategy",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed"
]

[tool.poetry.scripts]
gss-ri2048 = "game_simulation_sandbox.ri2048.__main__:main"
gss-ri2048-simple = "game_simulation_sandbox.ri2048.simple_strategy:main"
gss-scythe = "game_simulation_sandbox.scythe.__main__:main"
gss-nidavellir-full = "game_simulation_sandbox.nidavellir.coin_upgrades:main"
gss-nidavellir-qlearn = "game_simulation_sandbox.nidavellir.qlearn:main"
gss-frozenlake = "game_simulation_sandbox.frozenlake.__main__:main"

[tool.poetry.dependencies]
python = "3.8.*"
tqdm = "^4.59.0"
anytree = "^2.8.0"
tensorflow = "^2.4.1"
matplotlib = "^3.3.4"
tf-agents = "^0.7.1"
coloredlogs = "^15.0.1"
python-igraph = "^0.9.6"
PyYAML = "^5.4.1"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
pytest = "^6.2.4"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
